--- a/index.html
+++ b/index.html
@@ -4,7 +4,62 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <!-- Latest compiled and minified CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Vanilla JS Meme Generator</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="page-header">
+        <h1><i class="fa fa-2x fas fa-magic" aria-hidden="true"></i> Meme Generator</h1>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4">
+          <!-- BEGIN: Canvas rendering of generated Meme -->
+          <canvas id="meme" class="img-thumbnail"> Unfortunately your browser does not support canvas. </canvas>
+          <!-- END: Canvas rendering of generated Meme -->
+
+          <a class="btn btn-primary btn-block" id="download_meme"> <i class="fa fa-download" aria-hidden="true"></i> Download </a>
+        </div>
+        <div class="col-md-8">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="input-group">
+                <input type="file" class="form-control" id="imgInp" />
+              </div>
+            </div>
+          </div>
+
+          <hr />
+
+          <h3>Upper Text:</h3>
+          <div class="form-group mt-4 mb-4">
+            <input type="text" class="form-control form-control-lg" value="Test" id="top_text" />
+          </div>
+
+          <h3>Lower Text:</h3>
+          <div class="form-group mt-4 mb-4">
+            <input type="text" class="form-control form-control-lg" value="Test" id="bottom_text" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
+      crossorigin="anonymous"
+    ></script>
+    <script src="app.js"></script>
+  </body>
 </html>
