--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div class="card-body">
                   <div class="row">
                     <div class="col-md-12">         
-                      <div class="form-group">
+                      <div class="form-group mt-4 mb-4">
                         <div class="row">
                           <div class="col-md-3">
                             <label class="control-label" for="text_size">Font size:</label>
@@ -78,7 +78,7 @@
                         </div>
                       </div>
 
-                      <div class="form-group">
+                      <div class="form-group mt-4 mb-4">
                         <div class="row">
                           <div class="col-md-3">
                             <label class="control-label" for="color">Font color:</label>
@@ -87,6 +87,18 @@
                             <input style="width: 100%" name="color" id="text_color" type="color" value="#ffffff"/>
                           </div>
                           <div class="col-md-2 setting-value"><span id="text_color_value">#ffffff</span></div>
+                        </div>
+                      </div>
+                      <div class="form-group mt-4 mb-4">
+                        <div class="row">
+                          <div class="col-md-3">
+                            <label class="control-label" for="color">Font family:</label>
+                          </div>
+                          <div class="col-md-7">
+                            <select class="form-select" id="text_font_family">
+                            </select>
+                          </div>
+                          <div class="col-md-2 setting-value"><span id="text_font_family_value">Arial</span></div>
                         </div>
                       </div>
                     </div>
