--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Pacifico" />
     <link rel="stylesheet" href="style.css" />
     <title>jQuery Bootstrap Meme Generator</title>
   </head>
@@ -29,9 +30,8 @@
              <div class="bottom_text_container"><p id="bottom_text_content"></p></div>
             </div>
           </div>
-          <div class="col-md-12">
-            <a class="btn btn-primary btn-block" id="download_meme"> <i class="fa fa-download" aria-hidden="true"></i> Download </a>
-            
+          <div class="col-md-12 mt-4 text-center">
+            <a class="btn btn-primary btn-block" id="download_meme"> <i class="fa fa-download" aria-hidden="true"></i> Download </a>   
           </div>
         </div>
 
