--- a/index.html
+++ b/index.html
@@ -23,19 +23,21 @@
       </div>
 
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 col-sm-12">
           <div class="col-md-12">
             <div  id="meme" class="img-thumbnail meme-container">
              <div class="top_text_container"><p id="top_text_content"></p></div>
              <div class="bottom_text_container"><p id="bottom_text_content"></p></div>
             </div>
           </div>
-          <div class="col-md-12 mt-4 text-center">
-            <a class="btn btn-primary btn-block" id="download_meme"> <i class="fa fa-download" aria-hidden="true"></i> Download </a>   
+          <div class="col-md-12 mt-4 text-center d-flex flex-column align-items-center">
+            <button class="btn btn-primary btn-block" id="download_as_png"> <i class="fa fa-download" aria-hidden="true"></i> Download as PNG</button>   
+            <button class="btn btn-primary btn-block" id="download_as_jpeg"> <i class="fa fa-download" aria-hidden="true"></i> Download as JPEG</button>
+            <button class="btn btn-primary btn-block" id="download_as_gif"> <i class="fa fa-download" aria-hidden="true"></i> Download as Gif</button>  
           </div>
         </div>
 
-        <div class="col-md-6">
+        <div class="col-md-6 col-sm-12">
           <div class="card">
             <div class="card-header">
               <div class="row">
@@ -113,11 +115,8 @@
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dom-to-image/2.6.0/dom-to-image.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.0/FileSaver.min.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
