default text removed

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
 
               <h3><i class="far fa-comment-dots"></i> Upper Text:</h3>
               <div class="form-group mt-4 mb-4">
-                <input type="text" class="form-control form-control-lg" value="Test" id="top_text" />
+                <input type="text" class="form-control form-control-lg" value="" id="top_text" />
               </div>
 
               <h3><i class="far fa-comment-dots"></i> Lower Text:</h3>
               <div class="form-group mt-4 mb-4">
-                <input type="text" class="form-control form-control-lg" value="Test" id="bottom_text" />
+                <input type="text" class="form-control form-control-lg" value="" id="bottom_text" />
               </div>
 
               <hr />
